Fix navbar collapse button

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,7 +21,7 @@ a {
   margin: 0px 10px 15px 10px;
 }
 
-.collapsed{
+.box-collapsed{
   display: none;
 }
 
